--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ clap = { version = "4.0.32", features = ["derive"] }
 dirs = "4.0.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_derive = "1.0.152"
+sudo = "0.6.0"
 toml = "0.5.10"
